# mykeibadb-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
doc/: CODE_TABLE.md  DATA_TABLE.md  DIRECTORY.md  SPEC.md
doc/DATA_TABLE/: 001_TK_TOKUBETSU_TOROKUBA.md  001_TK_TOKUBETSU_TOROKUBAGOTO_JOHO.md  002_RA_RACE_SHOSAI.md  003_SE_UMAGOTO_RACE_JOHO.md  004_HR_HARAIMODOSHI.md  005_H1_HYOSU1.md  005_H1_HYOSU1_FUKUSHO.md  005_H1_HYOSU1_SANRENPUKU.md  005_H1_HYOSU1_TANSHO.md  005_H1_HYOSU1_UMAREN.md  005_H1_HYOSU1_UMATAN.md  005_H1_HYOSU1_WAKUREN.md  005_H1_HYOSU1_WIDE.md  006_H6_HYOSU6.md  006_H6_HYOSU6_SANRENTAN.md  007_O1_ODDS1.md  007_O1_ODDS1_FUKUSHO.md  007_O1_ODDS1_TANSHO.md  007_O1_ODDS1_WAKUREN.md  007a_O1_ODDS1_FUKUSHO_JIKEIRETSU.md  007a_O1_ODDS1_JIKEIRETSU.md  007a_O1_ODDS1_TANSHO_JIKEIRETSU.md  007a_O1_ODDS1_WAKUREN_JIKEIRETSU.md  008_O2_ODDS2_UMAREN.md  008a_O2_ODDS2_UMAREN_JIKEIRETSU.md  009_O3_ODDS3_WIDE.md  010_O4_ODDS4_UMATAN.md  011_O5_ODDS5_SANRENPUKU.md  012_O6_ODDS6_SANRENTAN.md  013_UM_KYOSOBA_MASTER2.md  014_KS_KISHU_MASTER.md  015_CH_CHOKYOSHI_MASTER.md  016_BR_SEISANSHA_MASTER2.md  017_BN_BANUSHI_MASTER.md  018_HN_HANSHOKUBA_MASTER2.md  019_SK_SANKU_MASTER2.md  020_CK_SHUSSOBETSU_BABA.md  020_CK_SHUSSOBETSU_BANUSHI.md  020_CK_SHUSSOBETSU_CHOKYOSHI.md  020_CK_SHUSSOBETSU_KEIBAJO.md  (+23 more)
doc/DEVELOP/: INST.md  PLAN.md
example/: db_connect_example.py  db_connect_test.py
example/getter/hyosu/: example_hyosu1.py  example_hyosu1_fukusho.py  example_hyosu1_umatan.py  example_hyosu1_wide.py  example_hyosu6_sanrentan.py
example/getter/kyosoba/: example_kyosoba_torihiki_kakaku2.py
example/getter/master/: example_chokyoshi_master.py  example_kishu_master.py  example_record_master.py
example/getter/mining/: example_data_mining_time.py
example/getter/odds/: example_odds1_tansho.py  example_odds1_wakuren.py  example_odds3_wide.py  example_odds6_sanrentan.py
example/getter/win5/: example_win5.py
mykeibadb/: __init__.py  config.py  connection.py  exceptions.py  getters.py  py.typed  tables.py  utils.py
mykeibadb/code_converter/: __init__.py  code_converter.py  keibajo_code.yml  kijo_shikaku_code.yml  seibetsu_code.yml  tozai_shozoku_code.yml  track_code.yml
mykeibadb/getters/: __init__.py  base.py  chokyo.py  hyosu.py  kyosoba.py  master.py  mining.py  odds.py  others.py  race.py  shussobetsu.py  sokuho.py  win5.py
test/integration/: conftest.py  test_chokyo_tables.py  test_connection.py  test_course_joho.py  test_data_mining_tables.py  test_hyosu_tables.py  test_kaisai_schedule.py  test_kyosoba_detail_tables.py  test_master_tables.py  test_odds_tables.py  test_other_tables.py  test_race_tables.py  test_shussobetsu_tables.py  test_sokuhou_tables.py  test_win5_tables.py
test/mykeibadb/: __init__.py  conftest.py  test_haraimodoshi_count.py  test_kaisai_schedule_count.py  test_odds1_fukusho_count.py  test_odds1_tansho_count.py  test_race_shosai_count.py  test_umagoto_race_joho_count.py
test/unit/: __init__.py  test_import.py
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_chokyo_tables.py  test_course_joho.py  test_hyosu_tables.py  test_kaisai_schedule.py  test_kyosoba_detail_tables.py  test_other_tables.py  test_shussobetsu_tables.py  test_sokuhou_tables.py
tests/unit/: test_import.py
(+117 files in other folders)
